# Fake-Job-Posting-Neural-Network-fast-api-with-deployment

./: README.md  docker-compose.yml  main.py  pyproject.toml  run_app.py
backend/: Dockerfile  main.py  model.py  preprocessor.py  requirements.txt
frontend/: Dockerfile  app.py  requirements.txt
